css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

.container {
    width: 880px;
    margin: auto;
}

/* Header Styles */

header {
    width: 100%;
    display: flex;
}

header nav {
    margin-top: 40px; 
    width: 70%;
    justify-content: space-between;
    display: flex;
}

header nav a {
    text-decoration: none;
    color: #b0b0b0;
}

header nav a:hover {
    text-decoration: underline;
    color: black;
}

header .logo {
    margin: 28px 0 0 91px;
    height:auto;
}

/* Call To Action (CTA) Styles */

.cta {
    display: flex;
    margin-top: 72px;
    justify-content: flex-end;
}

.cta .cta-text {
    font-size: 72px;
    text-align: center;
    letter-spacing: 5px;
    display: flex;
    justify-content: center;
    flex-flow: column;
    align-items: center;
    margin: 0 82px 0 0;
}

.cta .cta-text button {
    border: 1px double black;
    font-size: 16px;
    background: white;
    width: 170px;
    height: 32px;
    margin-top: 10px;
    cursor: pointer;
}

.cta .cta-text button:hover {
    background: black;
    color: white;
}

/* Main Content Styles */

.main-content {
   border-top: 2px solid black; 
   border-bottom: 2px solid black;
   margin: 75px 0 35px 0;
   padding: 35px 0;
   font-size: 16px;
   line-height: 18px;
}

.main-content .top-content {
    display: flex;
}

.main-content .middle-img {
    display: block;
    margin: 30px auto;
}

.main-content .bottom-content {
    display: flex;
}

.main-content .bottom-content p {
    padding-right: 20px;
}

/* Contact Styles */

.contact p {
    margin: 15px 0;
}

/* Footer Styles */

footer {
    text-align: center;
    margin: 40px 0 20px;
}

/* Services Styles */

.services-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    line-height: 1.3;
}

.services-content .services-header-img {
    margin: 20px 0;
}

.services-content h1 {
    font-size: 26px;
    margin: 10px 0;
}

.services-content .services-text {
 border-bottom: 1px solid black;
 padding-bottom: 40px;
 margin-bottom: 20px
}

.services-content .card {
    padding: 20px;
    border: 1px solid black;
    width: 48%;
    background: whitesmoke;
    margin: 20px 0;
}

.services-content .card button {
    padding: 10px 40px;
    margin-top: 20px;
    cursor: pointer;
    background: white;
    border-radius: 5px;
    border: 1px solid black;
}

.services-content .card button:hover {
    background: black;
    color: white;
} 

.services-content .services-info ul {
    margin: 20px;
}

.services-content .services-info ul li{
    list-style: square;
    padding: 5px;
}

.services-content .services-info {
    display: flex;
    flex-wrap: wrap;
    border-top: 2px solid black; 
    margin: 20px 0 35px 0;
    padding-top: 40px; 
}

.services-content .services-info .facts {
  width: 45%;
  margin: 0 60px 20px 0;
}

.services-content .services-info .facts p {
  margin-bottom: 20px;
}

.services-content .services-info .services-info-img {
  width: 47%;
  height: auto;
}

@media (max-width:800px){

    .container{
        width:90%;
        margin: 5px 5%;
    }

    header {
        flex-direction: column-reverse;
    }
    
    header nav {
    width:100%;
    text-align:center;
    }

    header .logo {
        display:flex;
        justify-content:center;
        align-items:center; 
        margin: 0 240px;
        width:auto; 
    }

    .cta {
        display:flex;
        justify-content:center;
        margin-left:115px;
    }

    .cta img {
        display:none; 
    }
    
    .main-content {
        display:flex;
        flex-wrap:wrap;
        justify-content:space-around;
        margin-left:0;
    }

   .main-content .top-content{
       align-items:center;
      
   }

   .main-content .middle-img {
       margin: 30px 0;
       width:100%;
   }

   .services-content .services-header-img {
       width:100%;
   }
   
}

@media (max-width:500px){
    header nav{
        display:flex;
        flex-direction:column;
        justify-content:center; 
        margin:0;
    }

    header nav a {
        border-bottom:1px solid gray;
        border-top: 1px solid gray;
        padding:20px 180px;;
    }

    header .logo {
        margin:0;
        padding:25px 120px;
    }

    .cta {
        margin-left:100px;
        margin-top:40px;
    }
    .main-content {
        flex-direction:column;
    }

    .main-content .top-content {
        flex-direction:column;
    }

    .main-content .top-content .text-content {
        padding:20px 0;
    }

    .main-content .bottom-content {
        flex-direction:column; 
    }

    .main-content .bottom-content .text-content {
        margin-bottom:10px;
        padding: 10px 0; 
    }

    .services-content .services-info {
        width:100%;
        display:flex;
        justify-content:center;
        align-items:center;
        padding: 10%;
    }
    .services-content .services-info .services-info-img {
        width:100%;
    }
}

